# booster_robotics_sdk

./: .gitignore  CMakeLists.txt  README.md  install.sh
python/: LICENSE  binding.cpp  pyproject.toml
python/booster_sdk/: booster_interface.py  cmd_publisher.py  setup.py  state_subscriber.py
python/booster_sdk/constants/: t1.py
python/booster_sdk/datatypes/: geometry.py  robot.py
python/booster_sdk/tests/: test_geometric_types.py  test_robot_types.py  test_t1_constants.py
